debhelper (12.2.3) UNRELEASED; urgency=medium

  * dh_installinit: Revert "Fail with an error if --name is given but
    there is no matching init script.".  (Closes: #932073,
    Reopens: #462389)

 -- Niels Thykier <niels@thykier.net>  Fri, 19 Jul 2019 18:27:41 +0000

debhelper (12.2.2) unstable; urgency=medium

  * dh_shlibdeps: Remove regex anchor when parsing file(1) to aovid
    regressions with setuid/setgid binaries.  Thanks to James
    Cowgill for reporting the issue.  (Closes: #932240)
  * dh_strip: Ditto.

 -- Niels Thykier <niels@thykier.net>  Tue, 16 Jul 2019 21:03:38 +0000

debhelper (12.2.1) unstable; urgency=medium

  [ Dmitry Bogatov ]
  * dh_installinit: Fix regression where dh_installinit bailed
    out on --name if only one of the acted on packages had an
    init script file.  Thanks to Helmut Grohne for reporting
    the issue.  (Closes: #932073)

 -- Niels Thykier <niels@thykier.net>  Tue, 16 Jul 2019 20:21:32 +0000

debhelper (12.2) unstable; urgency=medium

  [ Niels Thykier ]
  * Dh_Lib: Ensure the error function always triggers the same
    exit code on termination.  Previously, it depended on the
    value of the last error (if any).
  * Buildsystem/make: Fix regression where cross-flags were
    passed in a non-cross build.  (Closes: #925175)
  * dh_perl: Fix code to prune (skip) /usr/share/doc which
    never worked.
  * doc/PROGRAMMING: Document that the environment variable
    DH_AUTOSCRIPTDIR can be used for testing purposes to
    shadow existing or test new autoscript snippets.  Thanks
    to Dmitry Bogatov for the suggestion.  (Closes: #925281)
  * dh_compress: Exclude .haddock and .hs files (as this is
    customary for haskell packages).
  * dh_installinfo: Update NOOP PROMISE to account for
    dh_missing's needs.  Thanks to Daniel Kahn Gillmor for
    reporting the issue.  (Closes: #930689)
  * debhelper.pod: Document that debhelper will use
    dpkg-buildflags for setting CFLAGS et al and that it is