@@ -3,6 +3,11 @@ debhelper (12.2.3) UNRELEASED; urgency=medium
   * dh_installinit: Revert "Fail with an error if --name is given but
     there is no matching init script.".  (Closes: #932073,
     Reopens: #462389)
+  * Dh_Getopt.pm: Produce a better error message when -p<pkg> is
+    ignored in an architecture constrained override (e.g. during an
+    architecture specific build and the -p argument refers to an
+    arch:all package).  Thanks to Helmut Grohne for reporting the
+    issue.  (Closes: #932262)
 
  -- Niels Thykier <niels@thykier.net>  Fri, 19 Jul 2019 18:27:41 +0000
 
